0.1 - 0.2

* Converted to use unix-privesc-check style file layout
* Cleaned up check descriptions and messages
* Added lib/checks/binary_SSL_cipher and lib/checks/binary_SSL_protocol

0.0 - 0.1

* Initial PoC