@@ -3,6 +3,7 @@
 * Converted to use unix-privesc-check style file layout
 * Cleaned up check descriptions and messages
 * Added lib/checks/binary_SSL_cipher and lib/checks/binary_SSL_protocol
+* Added tools/dump_process
 
 0.0 - 0.1
 
